# wasm-raylib-game

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  PRODUCT.md  ROADMAP.md
src/: main.cpp
web/: shell.html
